--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ tensorflow = "*"
 tensorflow-datasets = "*"
 matplotlib = "*"
 google-cloud-bigquery = "*"
+beautifulsoup4 = "*"
 
 [requires]
 python_version = "3.7"
