--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-tensorflow = "*"
 tensorflow-datasets = "*"
 matplotlib = "*"
 google-cloud-bigquery = "*"
+pymongo = "*"
+tensorflow = "*"
 
 [requires]
 python_version = "3.7"
