Set pymongo to version 3.4.0 to be compatible with pi

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 tensorflow-datasets = "*"
 matplotlib = "*"
 google-cloud-bigquery = "*"
-pymongo = "*"
+pymongo = "==3.4.0"
 tensorflow = "*"
 
 [requires]
